TP 3/gcc.log
fs.c: In function ‘fs_format’:
fs.c:275:38: error: ‘S_IWRITE’ undeclared (first use in this function)
  275 |         sb->fd = open(fname, O_RDWR, S_IWRITE | S_IREAD);
      |                                      ^~~~~~~~
fs.c:275:38: note: each undeclared identifier is reported only once for each function it appears in
fs.c:275:49: error: ‘S_IREAD’ undeclared (first use in this function)
  275 |         sb->fd = open(fname, O_RDWR, S_IWRITE | S_IREAD);
      |                                                 ^~~~~~~
fs.c: In function ‘fs_write_file’:
fs.c:492:16: warning: variable ‘aux’ set but not used [-Wunused-but-set-variable]
  492 |         int ii,aux;
      |                ^~~
fs.c: In function ‘fs_read_file’:
fs.c:743:13: warning: variable ‘aux’ set but not used [-Wunused-but-set-variable]
  743 |         int aux, bufaux, nlinks, i, mod;
      |             ^~~
fs.c: In function ‘fs_unlink’:
fs.c:854:13: warning: variable ‘aux’ set but not used [-Wunused-but-set-variable]
  854 |         int aux;
      |             ^~~
fs.c: In function ‘fs_mkdir’:
fs.c:969:13: warning: variable ‘aux’ set but not used [-Wunused-but-set-variable]
  969 |         int aux;
      |             ^~~
fs.c: In function ‘fs_rmdir’:
fs.c:1057:13: warning: variable ‘aux’ set but not used [-Wunused-but-set-variable]
 1057 |         int aux,ii;
      |             ^~~
fs.c: In function ‘fs_list_dir’:
fs.c:1184:13: warning: variable ‘aux’ set but not used [-Wunused-but-set-variable]
 1184 |         int aux, i;
      |             ^~~
/usr/bin/ld: cannot find fs.o: No such file or directory
collect2: error: ld returned 1 exit status
/usr/bin/ld: cannot find fs.o: No such file or directory
collect2: error: ld returned 1 exit status
/usr/bin/ld: cannot find fs.o: No such file or directory
collect2: error: ld returned 1 exit status
/usr/bin/ld: cannot find fs.o: No such file or directory
collect2: error: ld returned 1 exit status
fs.c: In function ‘fs_format’:
fs.c:275:38: error: ‘S_IWRITE’ undeclared (first use in this function)
  275 |         sb->fd = open(fname, O_RDWR, S_IWRITE | S_IREAD);
      |                                      ^~~~~~~~
fs.c:275:38: note: each undeclared identifier is reported only once for each function it appears in
fs.c:275:49: error: ‘S_IREAD’ undeclared (first use in this function)
  275 |         sb->fd = open(fname, O_RDWR, S_IWRITE | S_IREAD);
      |                                                 ^~~~~~~
fs.c: In function ‘fs_write_file’:
fs.c:492:16: warning: variable ‘aux’ set but not used [-Wunused-but-set-variable]
  492 |         int ii,aux;
      |                ^~~
fs.c: In function ‘fs_read_file’:
fs.c:743:13: warning: variable ‘aux’ set but not used [-Wunused-but-set-variable]
  743 |         int aux, bufaux, nlinks, i, mod;
      |             ^~~
fs.c: In function ‘fs_unlink’:
fs.c:854:13: warning: variable ‘aux’ set but not used [-Wunused-but-set-variable]
  854 |         int aux;
      |             ^~~
fs.c: In function ‘fs_mkdir’:
fs.c:969:13: warning: variable ‘aux’ set but not used [-Wunused-but-set-variable]
  969 |         int aux;
      |             ^~~
fs.c: In function ‘fs_rmdir’:
fs.c:1057:13: warning: variable ‘aux’ set but not used [-Wunused-but-set-variable]
 1057 |         int aux,ii;
      |             ^~~
fs.c: In function ‘fs_list_dir’:
fs.c:1184:13: warning: variable ‘aux’ set but not used [-Wunused-but-set-variable]
 1184 |         int aux, i;
      |             ^~~
/usr/bin/ld: cannot find fs.o: No such file or directory
collect2: error: ld returned 1 exit status
fs.c: In function ‘fs_format’:
fs.c:275:38: error: ‘S_IWRITE’ undeclared (first use in this function)
  275 |         sb->fd = open(fname, O_RDWR, S_IWRITE | S_IREAD);
      |                                      ^~~~~~~~
fs.c:275:38: note: each undeclared identifier is reported only once for each function it appears in
fs.c:275:49: error: ‘S_IREAD’ undeclared (first use in this function)
  275 |         sb->fd = open(fname, O_RDWR, S_IWRITE | S_IREAD);
      |                                                 ^~~~~~~
fs.c: In function ‘fs_write_file’:
fs.c:492:16: warning: variable ‘aux’ set but not used [-Wunused-but-set-variable]
  492 |         int ii,aux;
      |                ^~~
fs.c: In function ‘fs_read_file’:
fs.c:743:13: warning: variable ‘aux’ set but not used [-Wunused-but-set-variable]
  743 |         int aux, bufaux, nlinks, i, mod;
      |             ^~~
fs.c: In function ‘fs_unlink’:
fs.c:854:13: warning: variable ‘aux’ set but not used [-Wunused-but-set-variable]
  854 |         int aux;
      |             ^~~
fs.c: In function ‘fs_mkdir’:
fs.c:969:13: warning: variable ‘aux’ set but not used [-Wunused-but-set-variable]
  969 |         int aux;
      |             ^~~
fs.c: In function ‘fs_rmdir’:
fs.c:1057:13: warning: variable ‘aux’ set but not used [-Wunused-but-set-variable]
 1057 |         int aux,ii;
      |             ^~~
fs.c: In function ‘fs_list_dir’:
fs.c:1184:13: warning: variable ‘aux’ set but not used [-Wunused-but-set-variable]
 1184 |         int aux, i;
      |             ^~~
/usr/bin/ld: cannot find fs.o: No such file or directory
collect2: error: ld returned 1 exit status
